--- a/trunk/examples/Stocks/Stocks.csproj
+++ b/trunk/examples/Stocks/Stocks.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="..\..\src\SQLite.cs" />
+    <Compile Include="Stocks.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
