--- a/trunk/examples/StocksTouch/StocksTouch.csproj
+++ b/trunk/examples/StocksTouch/StocksTouch.csproj
@@ -12,6 +12,7 @@
     <MainNibFile>MainWindow.xib</MainNibFile>
     <AssemblyName>StocksTouch</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <MtouchSdkVersion>3.0</MtouchSdkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,6 +23,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ExtraMtouchArgs>-linksdkonly</ExtraMtouchArgs>
+    <MtouchLink>None</MtouchLink>
+    <MtouchDebug>True</MtouchDebug>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -29,6 +32,7 @@
     <OutputPath>bin\iPhoneSimulator\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <MtouchDebug>False</MtouchDebug>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,6 +43,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <MtouchDebug>True</MtouchDebug>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -47,6 +52,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <MtouchDebug>False</MtouchDebug>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -67,10 +73,18 @@
     <Compile Include="StocksView.xib.designer.cs">
       <DependentUpon>StocksView.xib</DependentUpon>
     </Compile>
+    <Compile Include="QueryCompiler.cs" />
+    <Compile Include="AddStockView.xib.cs">
+      <DependentUpon>AddStockView.xib</DependentUpon>
+    </Compile>
+    <Compile Include="AddStockView.xib.designer.cs">
+      <DependentUpon>AddStockView.xib</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainWindow.xib" />
     <Page Include="StocksView.xib" />
+    <Page Include="AddStockView.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
