Added support for experimental query builder. Where, OrderBy, and Take have been implemented. IQueryable has not been so Linq syntax doesn't currently work

--- a/examples/StocksTouch/StocksTouch.csproj
+++ b/examples/StocksTouch/StocksTouch.csproj
@@ -73,13 +73,13 @@
     <Compile Include="StocksView.xib.designer.cs">
       <DependentUpon>StocksView.xib</DependentUpon>
     </Compile>
-    <Compile Include="QueryCompiler.cs" />
     <Compile Include="AddStockView.xib.cs">
       <DependentUpon>AddStockView.xib</DependentUpon>
     </Compile>
     <Compile Include="AddStockView.xib.designer.cs">
       <DependentUpon>AddStockView.xib</DependentUpon>
     </Compile>
+    <Compile Include="..\..\src\SQLite.MonoTouchAdmin.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainWindow.xib" />
