Added support for enumerations by storing their integral value in the database

--- a/tests/SQLite.Tests.csproj
+++ b/tests/SQLite.Tests.csproj
@@ -39,5 +39,6 @@
     <Compile Include="BooleanTest.cs" />
     <Compile Include="..\src\SQLite.cs" />
     <Compile Include="InsertTest.cs" />
+    <Compile Include="CreateTableTest.cs" />
   </ItemGroup>
 </Project>
