Add support for byte[] and supporting tests. I suspect this commit will change all the line endings as I developed it on windows. Apologies in advance!

--- a/tests/SQLite.Tests.csproj
+++ b/tests/SQLite.Tests.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="BooleanTest.cs" />
     <Compile Include="..\src\SQLite.cs" />
+    <Compile Include="ByteArrayTest.cs" />
     <Compile Include="InsertTest.cs" />
     <Compile Include="CreateTableTest.cs" />
     <Compile Include="ConnectionTrackingTest.cs" />
