Fixed implementation of Skip() and added unit test for it

--- a/tests/SQLite.Tests.csproj
+++ b/tests/SQLite.Tests.csproj
@@ -41,5 +41,6 @@
     <Compile Include="ByteArrayTest.cs" />
     <Compile Include="InsertTest.cs" />
     <Compile Include="CreateTableTest.cs" />
+    <Compile Include="SkipTest.cs" />
   </ItemGroup>
 </Project>
