--- a/trunk/tests/SQLite.Tests.csproj
+++ b/trunk/tests/SQLite.Tests.csproj
@@ -41,5 +41,6 @@
     <Compile Include="ByteArrayTest.cs" />
     <Compile Include="InsertTest.cs" />
     <Compile Include="CreateTableTest.cs" />
+    <Compile Include="SkipTest.cs" />
   </ItemGroup>
 </Project>
