Added CollationAttribute to control the collation of string columns. Unit test added

--- a/tests/SQLite.Tests.csproj
+++ b/tests/SQLite.Tests.csproj
@@ -42,5 +42,6 @@
     <Compile Include="InsertTest.cs" />
     <Compile Include="CreateTableTest.cs" />
     <Compile Include="SkipTest.cs" />
+    <Compile Include="CollateTest.cs" />
   </ItemGroup>
 </Project>
