Added support for Linq Contains expressions. Contains are converted to IN statements with each value of the enumerable passed as a parameter.

--- a/tests/SQLite.Tests.csproj
+++ b/tests/SQLite.Tests.csproj
@@ -43,5 +43,6 @@
     <Compile Include="CreateTableTest.cs" />
     <Compile Include="SkipTest.cs" />
     <Compile Include="CollateTest.cs" />
+    <Compile Include="ContainsTest.cs" />
   </ItemGroup>
 </Project>
