Add initial Nullable<T> support and tests. Querying based on "X == null" and "X != null" don't currently work as the SQL generated needs to be "is null" / "is not null" AFAIK.

--- a/tests/SQLite.Tests.csproj
+++ b/tests/SQLite.Tests.csproj
@@ -44,5 +44,6 @@
     <Compile Include="SkipTest.cs" />
     <Compile Include="CollateTest.cs" />
     <Compile Include="ContainsTest.cs" />
+    <Compile Include="NullableTest.cs" />
   </ItemGroup>
 </Project>
